<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="18dp"
        android:text="@string/text1" />
    <Spinner
        android:id="@+id/input_v"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:prompt="@string/option_v" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/text2" />
    <EditText
        android:id="@+id/input_a"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/input_v"
        android:layout_alignTop="@+id/textView3"
        android:ems="5"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/input_a"
        android:text="@string/text3" />
    <EditText
        android:id="@+id/intput_hr"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/input_a"
        android:layout_toRightOf="@+id/textView4"
        android:ems="5"
        android:numeric="integer" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/intput_hr"
        android:text="@string/text4" />
    <EditText
        android:id="@+id/input_m"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/intput_hr"
        android:layout_alignTop="@+id/textView5"
        android:ems="5"
        android:numeric="integer" >
        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/input_m"
        android:text="@string/btn" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/submit"
        android:text="@string/text5" />
    <TextView
        android:id="@+id/respond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView6"
        android:text="" />
</RelativeLayout>
